shifting prob when drawing fixed

--- a/examples/styles/clm_chuong.css
+++ b/examples/styles/clm_chuong.css
@@ -3,28 +3,38 @@
 body {
 	font-family: 'Lato';
 	background-color: #f0f0f0;
-	margin: 0px auto;
+	margin: 0px 0px;
 	max-width: 1150px;
 }
 
+ 
 #overlay {
 	position: absolute;
 	top: 0px;
 	left: 0px;
 }
 
+#overlay1 {
+	position: absolute;
+	top: 50px;
+	left: 50px;
+}
+
 #container {
 	position : relative;
+	top: 0px;
 	width : 700px;
 	height : 500px;
 	/*margin : 0px auto;*/
+
 }
 
 #content {
-	margin-top : 10px;
+	/*margin-top : 10px;
 	margin-left : 100px;
 	margin-right : 100px;
-	max-width: 950px;
+	max-width: 950px;*/
+	border: 2px solid orange;
 }
 
 #sketch {
@@ -41,6 +51,9 @@ body {
 
 h2 {
 	font-weight : 400;
+	border: 1px solid;
+
+
 }
 
 .btn {
